# Edx-Oauth2

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG_LLAVEMX.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  README.md  README.rst  README_LLAVEMX.rst  TESTING.md  oauth2_llavemx.yml  oauth2_nem.yml  pyproject.toml  release.sh  setup.py
oauth2_llavemx/: __init__.py  apps.py  llavemx_oauth.py  pipeline.py
oauth2_nem/: __init__.py  nem_oauth.py
tests/: test_llavemx.py
tests/data/: llavemx-logout-ok.json  llavemx-roles-ok.json  llavemx-token-invalid-client.json  llavemx-token-invalid.json  llavemx-token-ok.json  llavemx-user-invalid-token.json  llavemx-user-ok-extranjero.json  llavemx-user-ok-nacional.json  llavemx-user-ok-sin-verificar.json
